name:           language-java
version:        0.0.1
cabal-version:  >= 1.2
author:         Kevin Charter
synopsis:       A library for reading, representing, and generating Java
                source code.
build-type:     Simple

library
  exposed-modules: Language.Java
  build-depends:   base >= 3,
                   containers >= 0.2.0.1,
                   parallel >= 1.1.0.1,
                   parsec >= 2.1.0.1,
                   pretty >= 1.0.1.0
  ghc-options:     -fwarn-incomplete-patterns
                   -fwarn-unused-imports
                   -- -prof -auto-all -caf-all
                   -O2
