name:           language-java
version:        0.0.4
cabal-version:  >= 1.2
author:         Kevin Charter
synopsis:       A library for reading, representing, and generating Java
                source code.
build-type:     Simple

library
  exposed-modules: Language.Java,
                   Language.Java.AST.Lexical,
                   Language.Java.Lexer.UnicodeEscapes
  build-depends:   base >= 4,
                   deepseq >= 1.1.0.0,
                   mtl >= 1.0,
                   text >= 0.7
  ghc-options:     -fwarn-incomplete-patterns
                   -fwarn-unused-imports
                   -- -prof -auto-all -caf-all
                   -O2
