name:           language-java
version:        0.0.4
cabal-version:  >= 1.2 && < 2
author:         Kevin Charter
synopsis:       A library for reading, representing, and generating Java
                source code.
build-type:     Simple

library
  exposed-modules: Language.Java,
                   Language.Java.AST.Lexical,
                   Language.Java.Lexer.UnicodeEscapes
  build-depends:   base >= 4 && < 5,
                   deepseq >= 1.1.0.0 && < 2,
                   mtl >= 1.0 && < 2,
                   text >= 0.7 && < 1
  ghc-options:     -fwarn-incomplete-patterns
                   -fwarn-unused-imports
                   -- -prof -auto-all -caf-all
                   -O2
